document: update project

--- a/doc/标准文档.md
+++ b/doc/标准文档.md
@@ -4,10 +4,8 @@
 
 校对：[郭孝星](https://github.com/guoxiaoxing)
 
-文章状态：编辑中
-
 **关于项目**
 
-> [Android Open Framework analysis](https://github.com/guoxiaoxing/android-open-framwork-analysis)项目旨在通过提供一系列的工具与方法，降低阅读Android系统源码的门槛，让更多的Android工程师理解Android系统，掌握Android系统。
+> [Android Open Framework analysis](https://github.com/guoxiaoxing/android-open-framework-analysis)项目主要用来分析Android平台主流开源框架的源码与原理实现。
 
 **文章目录**e
